--- a/index.html
+++ b/index.html
@@ -556,6 +556,9 @@
   <!--  Plugin for the DatePicker, full documentation here: https://github.com/uxsolutions/bootstrap-datepicker -->
   <script src="assets/js/plugins/moment.min.js"></script>
   <script src="assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
+
+  <script src="../assets/demo/demo.js"></script>
+  
   <!-- Control Center for Black UI Kit: parallax effects, scripts for the example pages etc -->
   <script src="assets/js/blk-design-system.min.js?v=1.0.0" type="text/javascript"></script>
   <script>
