--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
           <h2 class="text-white">When Will Crypto Cobra Club launch?<br></h2>
           <h4>The launch date is to be determined. TBD</h4>
           <h2 class="text-white mt-5">How Many Crypto Cobras are There?<br></h2>
-          <h4>There will be 10,000 dragons in the collection. The 1/1s are included in the mint.</h4>
+          <h4>There will be 10,000 cobras in the collection. The 1/1s are included in the mint.</h4>
           <h2 class="text-white mt-5">Where can I mint a Crypto Cobra NFT & How can I Obtain it?<br></h2>
           <h4>You can mint a Crypto Cobra Club NFT off our minting website that we will connect to our main website.</h4>
           <h2 class="text-white mt-5">How Much Does it Cost to Mint a Crypto Cobra?<br></h2>
@@ -558,7 +558,7 @@
   <script src="assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
 
   <script src="../assets/demo/demo.js"></script>
-  
+
   <!-- Control Center for Black UI Kit: parallax effects, scripts for the example pages etc -->
   <script src="assets/js/blk-design-system.min.js?v=1.0.0" type="text/javascript"></script>
   <script>
