--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
           <h2 class="text-white mt-5">How Do I Get Access to the Game?<br></h2>
           <h4>Snakelets will be required to play the game and will determine your starting characters' stats and perks for the Rogue-like game.</h4>
           <h2 class="text-white mt-5">What is a Snakelet & How Can I Acquire One?<br></h2>
-          <h4>Snakelets will first enter the ecosystem by an airdrop to holders owning 2 Crypto Cobra Club NFT's</h4>
+          <h4>Snakelets will first enter the ecosystem by an airdrop to holders owning 2 Crypto Cobra Club NFT's.</h4>
           <h2 class="text-white mt-5"><br></h2>
           <h4></h4>
         </div>
