--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
       <section class="section section-lg">
         <div class="container">
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-6">
               <div class="card card-coin card-plain">
                 <div class="card-header">
                   <img src="assets/img/sneakpeak4.png" class="img-center img-fluid rounded-circle shadow-lg">
@@ -426,7 +426,7 @@
                   <div class="row">
                     <ul class="list-group">
                       <li class="list-group-item">Co-Founder</li>
-                      <li class="list-group-item">UI/UX Developer</li>
+                      <li class="list-group-item">Blockchain Developer</li>
                     </ul>
                   </div>
                 </div>
@@ -435,7 +435,7 @@
                 </div> -->
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
               <div class="card card-coin card-plain">
                 <div class="card-header">
                   <img src="assets/img/sneakpeak5.png" class="img-center img-fluid rounded-circle shadow-lg">
@@ -459,7 +459,7 @@
                 </div> -->
               </div>
             </div>
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
               <div class="card card-coin card-plain">
                 <div class="card-header">
                   <img src="assets/img/sneakpeak6.png" class="img-center img-fluid rounded-circle shadow-lg">
@@ -478,11 +478,11 @@
                     </ul>
                   </div>
                 </div>
-                <!-- <div class="card-footer text-center">
+                <div class="card-footer text-center">
                   <button class="btn btn-info btn-simple">Twitter</button>
-                </div> -->
+                </div> 
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
