--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </a>
           </li>
           <li class="nav-item p-0">
-            <a class="nav-link" rel="tooltip" title="Join us on Discord" data-placement="bottom" href="https://discord.gg/CvcEcUCC" target="_blank">
+            <a class="nav-link" rel="tooltip" title="Join us on Discord" data-placement="bottom" href="https://discord.com/invite/cryptocobraclub" target="_blank">
               <i class="fab fa-discord"></i>
               <p class="d-lg-none d-xl-none">Discord</p>
             </a>
