--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
                 <a target="_blank" href="https://twitter.com/cryptocobraclub" class="icon-lg" >
                   <i class="fab fa-twitter mr-3" style="color: white;"></i>
                 </a>
-                <a target="_blank" href="https://discord.gg/CvcEcUCC" class="icon-lg">
+                <a target="_blank" href="https://discord.com/invite/cryptocobraclub" class="icon-lg">
                   <i class="fab fa-discord" style="color: white;"></i>
                 </a>
               </div>
